<resources>
    <string name="app_name">Poke</string>
    <string name="title_activity_menu_poke">MenuPoke</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Entrenador</string>
    <string name="nav_header_subtitle">%1$s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Kanto Region</string>
    <string name="menu_gallery">Atrapados</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="text_view_name"> %1$s </string>
    <string name="text_view_datos1"> %1$s </string>
    <string name="text_view_datos2"> %1$s </string>
    <string name="text_view_datos3"> %1$s </string>
    <string name="text_view_datos4"> %1$s </string>
    <string name="text_view_numeroorden"> Numero de Pokemon </string>
    <string name="text_view_altura">Altura </string>
    <string name="text_view_primeros_datos">Primeros Stats </string>
    <string name="text_view_primer_movimiento">Primer Movimiento </string>
    <string name="text_view_nombre"> Bulbasaur </string>
    <string name="textview">Seleccione Su Pokemon</string>
    <string name="textviewNombre">Nombre</string>
    <string name="textviewApellido">Apellido</string>
    <string name="textviewEmail">Correo</string>
    <string name="textviewContraseña">Contraseña</string>
    <string name="textview_User">Usuario</string>
    <string name="textview_Crear">Crear Cuenta</string>
    <string name="textview_Olvido">¿Olvidaste tu Contrseña?</string>
    <string name="textview_Registrate">Registrarse</string>
    <string name="textview_entrar">Entrar</string>
    <string name="textview_forgotEmail">Email</string>
    <string name="textview_forgotButton">Enviar Contraseña</string>
</resources>
